--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
+datetime,
+fastapi,
+pymongo,
+os,
+dotenv,
+sqlite3,
+requests,
+numpy,
+pandas,
 csv
-datetime
-fastapi 
-pymongo 
-os
-dotenv
-sqlite3
-requests 
-numpy
-pandas
