--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,10 +1,9 @@
-csv
-datetime
-fastapi 
-pymongo 
-os
-dotenv
-sqlite3
-requests 
-numpy
+datetime,
+fastapi,
+pymongo,
+os,
+dotenv,
+sqlite3,
+requests,
+numpy,
 pandas
