--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,9 +1,9 @@
-datetime,
-fastapi,
-pymongo,
-os,
-dotenv,
-sqlite3,
-requests,
-numpy,
-pandas
+pip install datetime
+pip install fastapi
+pip install pymongo
+pip install os
+pip install dotenv
+pip install sqlite3
+pip install requests
+pip install numpy
+pip install pandas
